@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - Pre-compute cast functions when they are created to save time each time
     they are called (gh#178, #179)
+  - sizeof and alignof can now be used as class methods (gh#183)
 
 0.96      2019-08-19 18:33:58 -0400
   - Production release identical to 0.95_11
